--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="grey">#E0E0E0</color>
     <color name="tab_checked">#3699ED</color>
     <color name="tab_unchecked">#999999</color>
+    <color name="getstarinfo">#3699ed</color>
+    <color name="text">#ffffff</color>
 </resources>
