--- a/app/src/main/res/layout/fragment_get_star_info.xml
+++ b/app/src/main/res/layout/fragment_get_star_info.xml
@@ -22,6 +22,7 @@
         android:layout_height="10dp" />
 
     <ListView
+        android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
 
