--- a/app/src/main/res/layout/activity_road.xml
+++ b/app/src/main/res/layout/activity_road.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".Activity.RoadActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@mipmap/working_on_it" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="25dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="正在建设中，尽请期待"
+            android:textColor="#333333"
+            android:textSize="11dp" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
