--- a/app/src/main/res/layout/activity_activate_kinder_std.xml
+++ b/app/src/main/res/layout/activity_activate_kinder_std.xml
@@ -74,12 +74,13 @@
         android:id="@+id/et_card_num"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:lines="1"
-        android:maxLength="24"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:background="@null"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="number"
+        android:lines="1"
+        android:maxLength="24" />
 
     <ImageView
         android:layout_width="match_parent"
