--- a/app/src/main/res/layout/activity_activate_other_std.xml
+++ b/app/src/main/res/layout/activity_activate_other_std.xml
@@ -71,15 +71,16 @@
         android:textSize="18sp" />
 
     <com.mpl.GrowthStud.Tools.LineEditText
+        android:id="@+id/et_schoolnum"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:lines="1"
-        android:maxLength="24"
-        android:id="@+id/et_schoolnum"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:background="@null"
-        android:gravity="center" />
+        android:gravity="center"
+        android:inputType="number"
+        android:lines="1"
+        android:maxLength="24" />
 
     <ImageView
         android:layout_width="match_parent"
