--- a/app/src/main/res/layout/fragment_achievement.xml
+++ b/app/src/main/res/layout/fragment_achievement.xml
@@ -63,6 +63,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="待完成"
@@ -74,6 +75,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:id="@+id/tv_complete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="已完成"
@@ -81,7 +83,9 @@
             android:textSize="15dp" />
     </LinearLayout>
 
-    <ListView
+    <LinearLayout
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
 </LinearLayout>
