我的成就，待完成

--- a/app/src/main/res/layout/todo_achieve_item.xml
+++ b/app/src/main/res/layout/todo_achieve_item.xml
@@ -5,9 +5,12 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
-    android:orientation="horizontal">
+    android:background="@drawable/item_shape"
+    android:orientation="horizontal"
+    android:paddingTop="10dp">
 
     <ImageView
+        android:id="@+id/head_img"
         android:layout_width="33dp"
         android:layout_height="33dp"
         android:layout_gravity="center_vertical"
@@ -33,15 +36,25 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/iv_1"
+                android:layout_width="wrap_content"
+                android:layout_height="10dp"
+                android:layout_gravity="center_vertical"
+                android:background="@mipmap/little_wenzi_img" />
+
+            <ImageView
+                android:layout_width="5dp"
+                android:layout_height="match_parent" />
+
             <TextView
                 android:id="@+id/tv_1"
                 android:layout_width="wrap_content"
                 android:layout_height="15dp"
                 android:layout_gravity="center_vertical"
-                android:drawableLeft="@mipmap/little_tuwen_img"
                 android:drawablePadding="5dp"
                 android:text="图文"
-                android:textColor="#60.e66666666668000000"
+                android:textColor="#000000"
                 android:textSize="10dp" />
 
             <ImageView
@@ -56,7 +69,7 @@
                 android:drawableLeft="@mipmap/little_duocai_img"
                 android:drawablePadding="5dp"
                 android:text="多彩生活"
-                android:textColor="#60.e66666666668000000"
+                android:textColor="#000000"
                 android:textSize="10dp" />
 
             <ImageView
@@ -70,15 +83,48 @@
                 android:layout_gravity="center_vertical"
                 android:drawablePadding="5dp"
                 android:text="评星："
-                android:textColor="#60.e66666666668000000"
+                android:textColor="#000000"
                 android:textSize="10dp" />
 
             <ImageView
-                android:id="@+id/iv_star"
+                android:id="@+id/iv_star1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:src="@mipmap/star_grey" />
+                android:src="@mipmap/star_grey"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/iv_star2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/star_grey"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/iv_star3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/star_grey"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/iv_star4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/star_grey"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/iv_star5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/star_grey"
+                android:visibility="invisible" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
