--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#ffffff"
+    android:orientation="vertical"
     tools:context=".Activity.VideoActivity">
 
     <LinearLayout
@@ -67,14 +67,13 @@
         android:textColorHint="#999999"
         android:textSize="10dp" />
     <!--展示上传的图片-->
-    <GridView
-        android:id="@+id/gridView"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/iv_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:columnWidth="60dp"
-        android:horizontalSpacing="10dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:src="@mipmap/add_video" />
 
 </LinearLayout>
