--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -76,4 +76,28 @@
         android:layout_marginTop="10dp"
         android:src="@mipmap/add_video" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_video"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp" />
+
+        <ImageButton
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/iv_video"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/iv_video"
+            android:background="@mipmap/delete_red"
+            android:visibility="invisible" />
+    </RelativeLayout>
+
+
 </LinearLayout>
