--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -58,11 +58,13 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/total_point"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="39dp"
-                android:text="1208"
+                android:gravity="center"
+                android:text="1"
                 android:textColor="#90670b"
                 android:textSize="19dp" />
 
@@ -92,6 +94,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/star_point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="422"
@@ -118,6 +121,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/pingjia_point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="422"
@@ -166,6 +170,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/star_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="35dp"
