--- a/app/src/main/res/layout/fragment_get_score_info.xml
+++ b/app/src/main/res/layout/fragment_get_score_info.xml
@@ -6,23 +6,12 @@
     android:orientation="vertical"
     tools:context=".Student.Activity.GetScoreInfoFragment">
 
-
-    <TextView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/circle_textview"
-        android:gravity="center"
-        android:text="422分"
-        android:textColor="#ffffff"
-        android:textSize="15dp" />
-
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="10dp" />
 
     <ListView
+        android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
 
