--- a/app/src/main/res/drawable/shape_corner1.xml
+++ b/app/src/main/res/drawable/shape_corner1.xml
@@ -9,5 +9,5 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/grey" />
+        android:color="#3699ED" />
 </shape>
