--- a/app/src/main/res/layout/fragment_found.xml
+++ b/app/src/main/res/layout/fragment_found.xml
@@ -29,6 +29,7 @@
             android:textSize="20dp" />
 
         <ImageButton
+            android:id="@+id/ib_message"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginRight="15dp"
