--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -36,6 +36,7 @@
                 android:layout_weight="1" />
 
             <ImageButton
+                android:id="@+id/ib_message"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:background="@mipmap/bell" />
