--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,94 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sll_main"
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="#ffffffff"
-    android:orientation="horizontal">
-
+    android:clickable="true"
+    android:paddingBottom="1dp"
+    app:ios="false"
+    app:leftSwipe="true"
+    app:swipeEnable="true">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:id="@+id/ll_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#ffffffff"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_head"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:src="@mipmap/icon_evaluation_info" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/iv_head"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:src="@mipmap/icon_evaluation_info" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:orientation="vertical">
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
                 android:orientation="horizontal">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:text="评审通知"
+                        android:textColor="#333333"
+                        android:textSize="12dp" />
+
+                    <com.mpl.GrowthStud.Student.View.CircleImageView
+                        android:id="@+id/iv_dot"
+                        android:layout_width="5dp"
+                        android:layout_height="5dp"
+                        android:layout_gravity="center"
+                        android:background="#FF4800"
+                        android:visibility="invisible" />
+
+                </LinearLayout>
+
+
                 <TextView
-                    android:id="@+id/tv_name"
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
-                    android:text="评审通知"
+                    android:text="2018-05-10"
                     android:textColor="#333333"
                     android:textSize="12dp" />
-
-                <com.mpl.GrowthStud.Student.View.CircleImageView
-                    android:id="@+id/iv_dot"
-                    android:layout_width="5dp"
-                    android:layout_height="5dp"
-                    android:layout_gravity="center"
-                    android:background="#FF4800"
-                    android:visibility="invisible" />
-
             </LinearLayout>
 
 
             <TextView
-                android:id="@+id/tv_time"
+                android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
-                android:text="2018-05-10"
-                android:textColor="#333333"
-                android:textSize="12dp" />
+                android:lines="1"
+                android:singleLine="true"
+                android:text="你的成就“难忘的生活”，等待老师审核中"
+                android:textColor="#666666"
+                android:textSize="9dp" />
         </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:singleLine="true"
-            android:text="你的成就“难忘的生活”，等待老师审核中"
-            android:textColor="#666666"
-            android:textSize="9dp" />
     </LinearLayout>
 
-
-</LinearLayout>
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:background="#F25454"
+        android:text="删除"
+        android:textColor="@android:color/white" />
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
