--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,11 +141,11 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/app_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:text="v1.0.0家庭端"
                 android:textSize="14dp" />
         </LinearLayout>
     </RelativeLayout>
