--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:gravity="center"
-        android:text="输入您身份证号码"
+        android:text="输入您手机号码"
         android:textColor="#333333"
         android:textSize="12dp" />
 
