--- a/app/src/main/res/layout/fragment_pmy.xml
+++ b/app/src/main/res/layout/fragment_pmy.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/my_background_gradient"
     android:orientation="vertical"
-    tools:context=".Student.Activity.MyFragment">
+    tools:context=".Parent.Activity.PMyFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,10 +24,10 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
-            android:src="@mipmap/student_head_img" />
+            android:src="@mipmap/head_parent_man" />
 
         <TextView
-            android:id="@+id/tv_student_name"
+            android:id="@+id/tv_parent_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -43,41 +43,8 @@
             android:layout_height="15dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="41dp"
-            android:layout_toRightOf="@+id/tv_student_name"
+            android:layout_toRightOf="@+id/tv_parent_name"
             android:background="@mipmap/small_boy_img" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_school"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/textview_shape"
-                android:gravity="center_vertical"
-                android:text="北京市十四中学"
-                android:textColor="#ffffff"
-                android:textSize="9dp" />
-
-            <TextView
-                android:layout_width="20dp"
-                android:layout_height="match_parent" />
-
-            <TextView
-                android:id="@+id/tv_grade"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/textview_shape"
-                android:gravity="center_vertical"
-                android:text="一年级·6班"
-                android:textColor="#ffffff"
-                android:textSize="9dp" />
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/ib_message"
@@ -104,17 +71,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="生日"
+            android:text="孩子账号"
             android:textColor="#353535"
             android:textSize="11dp" />
 
         <TextView
-            android:id="@+id/tv_brithday"
+            android:id="@+id/tv_bundle_chlid"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:drawableRight="@mipmap/right_arrow"
             android:gravity="center_vertical"
-            android:text="2008年7月28日"
+            android:text="绑定孩子账号"
             android:textColor="#999999"
             android:textSize="11dp" />
     </LinearLayout>
@@ -138,16 +105,16 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="学龄段"
+            android:text="班级"
             android:textColor="#353535"
             android:textSize="11dp" />
 
         <TextView
-            android:id="@+id/tv_school_grade"
+            android:id="@+id/tv_class"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="小学"
+            android:text=""
             android:textColor="#999999"
             android:textSize="11dp" />
     </LinearLayout>
@@ -172,23 +139,47 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="家长账号"
+            android:text="年级"
             android:textColor="#353535"
             android:textSize="11dp" />
 
-        <com.mpl.GrowthStud.Student.View.CircleImageView
-            android:id="@+id/iv_dot"
-            android:layout_width="5dp"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:background="#FF4800"
-            android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/tv_parent_id"
+            android:id="@+id/tv_grade"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableRight="@mipmap/right_arrow"
+            android:gravity="center_vertical"
+            android:textColor="#999999"
+            android:textSize="11dp" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:layout_marginLeft="10dp"
+        android:background="#999999" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="阶段"
+            android:textColor="#353535"
+            android:textSize="11dp" />
+
+        <TextView
+            android:id="@+id/tv_section"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textColor="#999999"
             android:textSize="11dp" />
@@ -222,7 +213,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="刘能"
             android:textColor="#999999"
             android:textSize="11dp" />
     </LinearLayout>
@@ -255,7 +245,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="成都师大附小"
             android:textColor="#999999"
             android:textSize="11dp" />
     </LinearLayout>
