--- a/app/src/main/res/layout/activity_choose_grade.xml
+++ b/app/src/main/res/layout/activity_choose_grade.xml
@@ -69,7 +69,7 @@
                 android:id="@+id/ll_youeryuan"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:background="@drawable/shadow"
+                android:background="@drawable/list_shadow"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -99,7 +99,7 @@
                 android:id="@+id/ll_xiaoxue"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:background="@drawable/shadow"
+                android:background="@drawable/list_shadow"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -137,7 +137,7 @@
                 android:id="@+id/ll_chuzhong"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:background="@drawable/shadow"
+                android:background="@drawable/list_shadow"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -167,7 +167,7 @@
                 android:id="@+id/ll_gaozhong"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:background="@drawable/shadow"
+                android:background="@drawable/list_shadow"
                 android:gravity="center"
                 android:orientation="vertical">
 
