--- a/app/src/main/res/layout/activity_tu_wen_info.xml
+++ b/app/src/main/res/layout/activity_tu_wen_info.xml
@@ -90,13 +90,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:columnWidth="60dp"
         android:horizontalSpacing="10dp"
         android:numColumns="3"
-        android:scrollbars="none"
         android:verticalSpacing="10dp"></GridView>
 
-    <LinearLayout
+    <ScrollView
         android:id="@+id/ll_addView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
