--- a/app/src/main/res/layout/fragment_cheng_jiu_yi_wan_cheng.xml
+++ b/app/src/main/res/layout/fragment_cheng_jiu_yi_wan_cheng.xml
@@ -8,7 +8,14 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        android:scrollbars="none" />
+
     <LinearLayout
         android:id="@+id/ll_empty"
         android:layout_width="wrap_content"
