--- a/app/src/main/res/layout/image_grid_view.xml
+++ b/app/src/main/res/layout/image_grid_view.xml
@@ -5,9 +5,10 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
+    <com.mpl.GrowthStud.Student.View.SquareLayout
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
-        android:layout_height="90dp" />
+        android:scaleType="fitXY"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
