--- a/app/src/main/res/layout/todo_achieve_item.xml
+++ b/app/src/main/res/layout/todo_achieve_item.xml
@@ -5,7 +5,7 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
-    android:background="@drawable/item_shape"
+    android:background="@drawable/list_shadow"
     android:orientation="horizontal"
     android:paddingTop="10dp">
 
