修复bug，页面字体和登录logo和加忘记密码弹窗

--- a/app/src/main/res/layout/activity_echievement.xml
+++ b/app/src/main/res/layout/activity_echievement.xml
@@ -40,6 +40,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:id="@+id/tv_choose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -49,6 +50,7 @@
             android:textSize="15dp" />
 
     </LinearLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -131,5 +133,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"></LinearLayout>
+
 
 </LinearLayout>
