--- a/app/src/main/res/layout/activity_activate_kinder_std.xml
+++ b/app/src/main/res/layout/activity_activate_kinder_std.xml
@@ -76,15 +76,16 @@
         android:layout_height="50dp"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
-        android:background="@null"
         android:gravity="center"
+        android:hint="请输入本人正确的身份证号码"
         android:inputType="number"
         android:lines="1"
-        android:maxLength="24" />
+        android:maxLength="30"
+        android:textSize="15dp" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="18dp" />
+        android:layout_height="10dp" />
 
     <TextView
         android:layout_width="match_parent"
