--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:background="@drawable/gradual_change"
         android:gravity="center"
         android:orientation="horizontal">
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:text="返回"
             android:textColor="#ffffff"
-            android:textSize="15dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:text="验证"
             android:textColor="#ffffff"
-            android:textSize="20dp" />
+            android:textSize="19dp" />
 
     </LinearLayout>
 
@@ -49,11 +49,11 @@
     <TextView
         android:id="@+id/tv_text"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="输入您手机号码"
         android:textColor="#333333"
-        android:textSize="12dp" />
+        android:textSize="19dp" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -70,7 +70,7 @@
         android:gravity="center"
         android:lines="1"
         android:textColor="#333333"
-        android:textSize="12dp" />
+        android:textSize="17dp" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -93,5 +93,6 @@
         android:background="@drawable/login_button_shape"
         android:gravity="center"
         android:text="获取验证码"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:textSize="17dp" />
 </LinearLayout>
