--- a/app/src/main/res/layout/fragment_achievement.xml
+++ b/app/src/main/res/layout/fragment_achievement.xml
@@ -9,57 +9,48 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:background="@drawable/gradual_change"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="15dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@mipmap/search" />
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="1"
+
+                android:gravity="center"
+                android:text="我的成就"
+                android:textColor="#ffffff"
+                android:textSize="19dp" />
 
             <ImageButton
                 android:id="@+id/ib_message"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
                 android:background="@mipmap/bell" />
 
             <com.mpl.GrowthStud.Student.View.CircleImageView
                 android:id="@+id/iv_dot"
                 android:layout_width="5dp"
                 android:layout_height="5dp"
+                android:layout_gravity="center_vertical"
                 android:background="#FF4800"
                 android:visibility="invisible" />
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="15dp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:gravity="center_vertical"
-            android:text="我的成就"
-            android:textColor="#ffffff"
-            android:textSize="23dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -71,8 +62,9 @@
 
         <TextView
             android:id="@+id/tv_todo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="待完成"
             android:textColor="#3699ed"
             android:textSize="15dp" />
@@ -83,8 +75,9 @@
 
         <TextView
             android:id="@+id/tv_complete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="已完成"
             android:textColor="#999999"
             android:textSize="15dp" />
