--- a/app/src/main/res/layout/fragment_found.xml
+++ b/app/src/main/res/layout/fragment_found.xml
@@ -30,8 +30,8 @@
 
         <ImageButton
             android:id="@+id/ib_message"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:background="@mipmap/bell" />
 
