--- a/app/src/main/res/layout/fragment_pmy.xml
+++ b/app/src/main/res/layout/fragment_pmy.xml
@@ -35,12 +35,12 @@
             android:layout_marginBottom="41dp"
             android:text="刘天天"
             android:textColor="#ffffff"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <ImageView
             android:id="@+id/iv_gender"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="41dp"
             android:layout_toRightOf="@+id/tv_parent_name"
@@ -48,8 +48,8 @@
 
         <ImageView
             android:id="@+id/ib_message"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/head_img"
@@ -73,7 +73,7 @@
             android:gravity="center_vertical"
             android:text="孩子账号"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/tv_bundle_chlid"
@@ -83,7 +83,7 @@
             android:gravity="center_vertical"
             android:text="绑定孩子账号"
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -107,7 +107,7 @@
             android:gravity="center_vertical"
             android:text="班级"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/tv_class"
@@ -116,7 +116,7 @@
             android:gravity="center_vertical"
             android:text=""
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -141,7 +141,7 @@
             android:gravity="center_vertical"
             android:text="年级"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
 
         <TextView
@@ -150,7 +150,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -174,7 +174,7 @@
             android:gravity="center_vertical"
             android:text="阶段"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/tv_section"
@@ -182,7 +182,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -206,7 +206,7 @@
             android:gravity="center_vertical"
             android:text="班主任"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/tv_teacher"
@@ -214,7 +214,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -238,7 +238,7 @@
             android:gravity="center_vertical"
             android:text="学校"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/tv_in_school"
@@ -246,7 +246,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -278,7 +278,7 @@
             android:gravity="center_vertical"
             android:text="设置"
             android:textColor="#353535"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/tv_set"
@@ -287,7 +287,7 @@
             android:drawableRight="@mipmap/right_arrow"
             android:gravity="center_vertical"
             android:textColor="#999999"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
