--- a/app/src/main/res/layout/parent_child_item.xml
+++ b/app/src/main/res/layout/parent_child_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="60dp"
     android:background="#ffffffff"
     android:orientation="horizontal">
 
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/iv_head"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_vertical"
             android:background="@mipmap/head_parent_man"
             android:gravity="center_vertical" />
@@ -31,50 +31,30 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:text="王红"
             android:textColor="#ff353535"
-            android:textSize="12dp" />
+            android:textSize="19dp" />
 
         <TextView
-            android:id="@+id/tv_content"
+            android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:text="柳传志申请绑定你的账号"
+            android:text="19877271627"
             android:textColor="#ff353535"
-            android:textSize="9dp" />
+            android:textSize="15dp" />
     </LinearLayout>
 
-    <com.mpl.GrowthStud.Student.View.CircleImageView
-        android:id="@+id/iv_dot"
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        android:layout_gravity="center"
-        android:background="#FF4800"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="10dp"
-        android:gravity="center_vertical"
-        android:text="已拒绝"
-        android:textColor="#999999"
-        android:textSize="11dp" />
-
-    <ImageView
-        android:id="@+id/iv_right"
+    <CheckBox
+        android:id="@+id/main_list_item_checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="10dp"
-        android:background="@mipmap/right_arrow"
-        android:visibility="invisible" />
+        android:button="@drawable/pcheckbox_style"></CheckBox>
 
 </LinearLayout>
