家长信息模块

--- a/app/src/main/res/layout/parent_child_item.xml
+++ b/app/src/main/res/layout/parent_child_item.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="10dp"
-        android:button="@drawable/pcheckbox_style"></CheckBox>
+        android:button="@drawable/pcheckbox_style"
+        android:focusable="false"></CheckBox>
 
 </LinearLayout>
