--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="getstarinfo">#3699ed</color>
     <color name="text">#ffffff</color>
     <color name="dot_not_choose">#EEEEEE</color>
+    <color name="text2">#666666</color>
 </resources>
