--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="输入您手机号码"
+        android:text="输入您学籍号码"
         android:textColor="#333333"
         android:textSize="19dp" />
 
@@ -100,7 +100,7 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/login_button_shape"
         android:gravity="center"
-        android:text="获取验证码"
+        android:text="下一步"
         android:textColor="#ffffff"
         android:textSize="17dp" />
 </LinearLayout>
