--- a/app/src/main/res/layout/activity_ptu_wen_check.xml
+++ b/app/src/main/res/layout/activity_ptu_wen_check.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".Student.Activity.WenZiInfoActivity">
+    tools:context=".Parent.Activity.PTuWenCheckActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,7 +71,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text=""
+                android:text="认识他人"
                 android:textColor="#333333"
                 android:textSize="19dp" />
 
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=""
+                android:text="2018-12-30"
                 android:textColor="#999999"
                 android:textSize="13dp" />
         </LinearLayout>
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:text=""
+            android:text="我的同桌叫Daved，是个有趣的男孩子。他特别喜欢摄影，他说好的摄影作品可以发人深省或者给人温暖。"
             android:textColor="#ff333333"
             android:textSize="15dp" />
 
@@ -99,6 +99,14 @@
             android:layout_width="match_parent"
             android:layout_height="14dp" />
 
+        <GridView
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:horizontalSpacing="10dp"
+            android:numColumns="3"
+            android:verticalSpacing="10dp"></GridView>
 
     </LinearLayout>
 
