--- a/app/src/main/res/layout/activity_pvideo_check.xml
+++ b/app/src/main/res/layout/activity_pvideo_check.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".Student.Activity.WenZiInfoActivity">
+    tools:context=".Parent.Activity.PVideoCheckActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text=""
+                android:text="2018-12-30"
                 android:textColor="#999999"
                 android:textSize="13dp" />
         </LinearLayout>
@@ -99,7 +99,24 @@
             android:layout_width="match_parent"
             android:layout_height="14dp" />
 
+        <FrameLayout
+            android:layout_width="120dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center_horizontal">
 
+
+            <ImageView
+                android:id="@+id/video_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ImageView>
+
+            <ImageView
+                android:id="@+id/stat_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@mipmap/startplay" />
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -126,7 +143,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="评价"
+                android:text="评审"
                 android:textColor="#333333"
                 android:textSize="11dp" />
 
