--- a/app/src/main/res/layout/activity_pwen_zi_check.xml
+++ b/app/src/main/res/layout/activity_pwen_zi_check.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".Student.Activity.WenZiInfoActivity">
+    tools:context=".Parent.Activity.PWenZiCheckActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
