--- a/app/src/main/res/layout/teacher_evaluate_item.xml
+++ b/app/src/main/res/layout/teacher_evaluate_item.xml
@@ -10,8 +10,9 @@
         android:background="#eeeeee" />
 
     <LinearLayout
+        android:id="@+id/ll_close"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
@@ -23,7 +24,7 @@
             android:gravity="center_vertical"
             android:text="评价"
             android:textColor="#333333"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -32,7 +33,7 @@
             android:gravity="center_vertical"
             android:src="@mipmap/opened"
             android:textColor="#333333"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <ImageView
@@ -42,7 +43,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
@@ -52,9 +53,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="待评价"
+            android:text="家长评价"
             android:textColor="#333333"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <ImageView
             android:layout_width="15dp"
@@ -78,7 +79,7 @@
         android:paddingRight="10dp"
         android:text="在学校多交一些朋友，相互学习共同成长!"
         android:textColor="#666666"
-        android:textSize="9sp" />
+        android:textSize="15dp" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -87,7 +88,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal">
@@ -99,7 +100,7 @@
             android:gravity="center_vertical"
             android:text="老师评价"
             android:textColor="#333333"
-            android:textSize="11dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -107,7 +108,7 @@
             android:gravity="center_vertical"
             android:text="评星："
             android:textColor="#333333"
-            android:textSize="8dp" />
+            android:textSize="15dp" />
 
         <ImageView
             android:layout_width="10dp"
@@ -154,7 +155,7 @@
         android:paddingRight="10dp"
         android:text="在学校多交一些朋友，相互学习共同成长!"
         android:textColor="#666666"
-        android:textSize="9sp" />
+        android:textSize="15dp" />
 
     <ImageView
         android:layout_width="match_parent"
