--- a/app/src/main/res/layout/teacher_evaluate_item.xml
+++ b/app/src/main/res/layout/teacher_evaluate_item.xml
@@ -77,7 +77,7 @@
         android:background="#f8f8f8"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="在学校多交一些朋友，相互学习共同成长!"
+        android:text=""
         android:textColor="#666666"
         android:textSize="15dp" />
 
@@ -153,7 +153,7 @@
         android:background="#f8f8f8"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="在学校多交一些朋友，相互学习共同成长!"
+        android:text=""
         android:textColor="#666666"
         android:textSize="15dp" />
 
